<resources>
    <string name="app_name">Invisere</string>
    <string name="TextField_name_hint">Name</string>
    <string name="TextField_username_hint">Username</string>
    <string name="TextField_email_hint">Email</string>
    <string name="TextField_rutes_hint">Rutes</string>
    <string name="TextField_favoritos_hint">Favoritos</string>
    <string name="TextField_password_hint">Password</string>
    <string name="TextField_confirm_password_hint">Confirm password</string>
    <string name="Button_cancel_login_text">Cancel</string>
    <string name="Button_login_text">Login</string>
    <string name="Button_signup_text">Signup</string>
    <string name="Button_cancel_text">Cancel</string>
    <string name="Button_save_text">Save</string>
    <string name="Button_change_photo_text">Change photo</string>
    <string name="Button_back_text">Back</string>
    <string name="Button_modify_profile_text">Modify profile</string>
    <string name="Button_logout_text">Logout</string>
    <string name="Button_profile_text">Profile</string>

    <string name="Message_error_password_empty">The password cannot be empty</string>
    <string name="Message_error_password_does_not_contain_capital_letters">The password does not contain capital letters</string>
    <string name="Message_error_password_does_not_contain_number">The password does not contain numbers</string>
    <string name="Message_error_password_does_not_contain_special_characters">The password does not contain special characters</string>
    <string name="Message_error_password_has_invalid_length">The Password has an invalid length</string>

    <string name="Message_error_name_empty">The name cannot be empty</string>
    <string name="Message_error_name_cannot_contain_special_characters">The name cannot contain special characters</string>
    <string name="Message_error_name_has_invalid_length">The name has an invalid length</string>
    <string name="Message_error_name_cannot_contain_number">The name cannot contain numbers</string>

    <string name="Message_error_username_empty">The username cannot be empty</string>
    <string name="Message_error_username_cannot_contain_special_characters">The username cannot contain special characters</string>
    <string name="Message_error_username_has_invalid_length">The username has an invalid length</string>
    <string name="Message_error_username_cannot_contain_number">The username cannot contain numbers</string>

    <string name="Message_error_email_empty">The email cannot be empty</string>
    <string name="Message_error_email_invalid">Enter a valid email</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="accept">Accept</string>
    <string name="eula_string"><![CDATA[<h2>End-User License Agreement (EULA) of <span class="app_name">Invisere</span></h2>

<p>This End-User License Agreement ("EULA") is a legal agreement between you and <span class="company_name">Invisere</span>. Our EULA was created by <a href="https://www.eulatemplate.com">EULA Template</a> for <span class="app_name">Invisere</span>.</p></p>

<p>This EULA agreement governs your acquisition and use of our <span class="app_name">Invisere</span> software ("Software") directly from <span class="company_name">Invisere</span> or indirectly through a <span class="company_name">Invisere</span> authorized reseller or distributor (a "Reseller"). Our Privacy Policy was created by <a href="https://www.generateprivacypolicy.com/">the Privacy Policy Generator</a>.</p>

<p>Please read this EULA agreement carefully before completing the installation process and using the <span class="app_name">Invisere</span> software. It provides a license to use the <span class="app_name">Invisere</span> software and contains warranty information and liability disclaimers.</p>

<p>If you register for a free trial of the <span class="app_name">Invisere</span> software, this EULA agreement will also govern that trial. By clicking "accept" or installing and/or using the <span class="app_name">Invisere</span> software, you are confirming your acceptance of the Software and agreeing to become bound by the terms of this EULA agreement.</p>

<p>If you are entering into this EULA agreement on behalf of a company or other legal entity, you represent that you have the authority to bind such entity and its affiliates to these terms and conditions. If you do not have such authority or if you do not agree with the terms and conditions of this EULA agreement, do not install or use the Software, and you must not accept this EULA agreement.</p>

<p>This EULA agreement shall apply only to the Software supplied by <span class="company_name">Invisere</span> herewith regardless of whether other software is referred to or described herein. The terms also apply to any <span class="company_name">Invisere</span> updates, supplements, Internet-based services, and support services for the Software, unless other terms accompany those items on delivery. If so, those terms apply.</p>

<h3>License Grant</h3>

<p><span class="company_name">Invisere</span> hereby grants you a personal, non-transferable, non-exclusive licence to use the <span class="app_name">Invisere</span> software on your devices in accordance with the terms of this EULA agreement.</p>

<p>You are permitted to load the <span class="app_name">Invisere</span> software (for example a PC, laptop, mobile or tablet) under your control. You are responsible for ensuring your device meets the minimum requirements of the <span class="app_name">Invisere</span> software.</p>

<p>You are not permitted to:</p>

<ul>
<li>Edit, alter, modify, adapt, translate or otherwise change the whole or any part of the Software nor permit the whole or any part of the Software to be combined with or become incorporated in any other software, nor decompile, disassemble or reverse engineer the Software or attempt to do any such things</li>
<li>Reproduce, copy, distribute, resell or otherwise use the Software for any commercial purpose</li>
<li>Allow any third party to use the Software on behalf of or for the benefit of any third party</li>
<li>Use the Software in any way which breaches any applicable local, national or international law</li>
<li>use the Software for any purpose that <span class="company_name">Invisere</span> considers is a breach of this EULA agreement</li>
</ul>

<h3>Intellectual Property and Ownership</h3>

<p><span class="company_name">Invisere</span> shall at all times retain ownership of the Software as originally downloaded by you and all subsequent downloads of the Software by you. The Software (and the copyright, and other intellectual property rights of whatever nature in the Software, including any modifications made thereto) are and shall remain the property of <span class="company_name">Invisere</span>.</p>

<p><span class="company_name">Invisere</span> reserves the right to grant licences to use the Software to third parties.</p>

<h3>Termination</h3>

<p>This EULA agreement is effective from the date you first use the Software and shall continue until terminated. You may terminate it at any time upon written notice to <span class="company_name">Invisere</span>.</p>

<p>It will also terminate immediately if you fail to comply with any term of this EULA agreement. Upon such termination, the licenses granted by this EULA agreement will immediately terminate and you agree to stop all access and use of the Software. The provisions that by their nature continue and survive will survive any termination of this EULA agreement.</p>

<h3>Governing Law</h3>

<p>This EULA agreement, and any dispute arising out of or in connection with this EULA agreement, shall be governed by and construed in accordance with the laws of <span class="country">es</span>.</p>]]></string>
    <string name="agreement_terms_and_conditions">Check here to indicate that you have read and agree to the terms of the service</string>
    <string name="Message_error_eula">EULA must be accepted</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="confirm">Confirm</string>
    <string name="code">Code</string>
    <string name="new_password">New Password</string>

    <string name="created_at">Created at</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>